--- a/Common/Languages/Russian/DefInjected/FactionDef/Factions_Hidden.xml
+++ b/Common/Languages/Russian/DefInjected/FactionDef/Factions_Hidden.xml
@@ -6,7 +6,7 @@
   <GR_RoamingMonstrosities.description>Вот, что бывает, когда генетические эксперименты идут вразнос несколько столетий подряд. Орды обезумевших от голода и мутаций представляют собой угрозу для всех без исключения на этой планете.</GR_RoamingMonstrosities.description>
   <!-- EN:The effect of hundreds of years of genetic experimentation running amok. Hordes of ravenous, maddened genetic aberrations are a threat to anyone in this planet. -->
   <GR_RoamingMonstrosities.fixedName>бродячие чудовища</GR_RoamingMonstrosities.fixedName>
+  <GR_RoamingMonstrosities.pawnSingular>бродячее чудовище</GR_RoamingMonstrosities.pawnSingular>
   <GR_RoamingMonstrosities.pawnsPlural>бродячие чудовища</GR_RoamingMonstrosities.pawnsPlural>
-
 
 </LanguageData>
