--- a/Common/Languages/Russian/DefInjected/HediffDef/Featherdust.xml
+++ b/Common/Languages/Russian/DefInjected/HediffDef/Featherdust.xml
@@ -6,21 +6,16 @@
   <GR_FeatherdustHigh.description>В крови присутствуют активные химические вещества перьепыли, вызывающие ощущение покоя и расслабления.</GR_FeatherdustHigh.description>
   <!-- EN:Featherdust's active chemical in the bloodstream. Generates a soft feeling of fuzzy well-being. -->
 
-
-  <!-- Smokeleaf addiction -->
-
   <GR_FeatherdustTolerance.label>толерантность к перьепыли</GR_FeatherdustTolerance.label>
   <!-- EN:featherdust tolerance -->
-  <GR_FeatherdustTolerance.description>Толерантность к перепыли. Чем она серьёзнее, тем больше потребуется обработанного перьепыли для получения первоначального эффекта.</GR_FeatherdustTolerance.description>
+  <GR_FeatherdustTolerance.description>Толерантность к перепыли. Чем она серьёзнее, тем больше потребуется обработанной перьепыли для получения первоначального эффекта.</GR_FeatherdustTolerance.description>
   <!-- EN: A built-up tolerance to featherdust. The more severe this tolerance is, the more featherdust it takes to get the same effect. -->
 
   <GR_FeatherdustAddiction.label>зависимость от перьепыли</GR_FeatherdustAddiction.label>
   <!-- EN:featherdust dependence -->
-  <GR_FeatherdustAddiction.description>Зависимость от перьепыли. Его продолжительное употребление вызывает неврологические изменения на клеточном уровне, из-за чего мозг уже не способен нормально функционировать без вещества.
-\nПерерыв в регулярном употреблении обработанной перьепыли вызовет абстинентный синдром — ломку. Длительное воздержание поможет мозгу вернуться к нормальному состоянию и избавиться от зависимости.</GR_FeatherdustAddiction.description>
-<!-- EN:A chemical addiction to featherdust. Long-term use of featherdust has caused neurological adaptations at the cellular level, so the brain can no longer function properly without the drug.
-\nWithout regular doses of featherdust, withdrawal symptoms will begin. However, extended abstinence will force the brain to adapt back to its normal state, resolving the addiction. -->
+  <GR_FeatherdustAddiction.description>Зависимость от перьепыли. Его продолжительное употребление вызывает неврологические изменения на клеточном уровне, из-за чего мозг уже не способен нормально функционировать без вещества.\n\nПерерыв в регулярном употреблении обработанной перьепыли вызовет абстинентный синдром — ломку. Длительное воздержание поможет мозгу вернуться к нормальному состоянию и избавиться от зависимости.</GR_FeatherdustAddiction.description>
+  <!-- EN:A chemical addiction to featherdust. Long-term use of featherdust has caused neurological adaptations at the cellular level, so the brain can no longer function properly without the drug.\n\nWithout regular doses of featherdust, withdrawal symptoms will begin. However, extended abstinence will force the brain to adapt back to its normal state, resolving the addiction. -->
   <GR_FeatherdustAddiction.stages.1.label>ломка</GR_FeatherdustAddiction.stages.1.label>
-<!-- EN:withdrawal -->
+  <!-- EN:withdrawal -->
 
 </LanguageData>
