--- a/Common/Languages/Russian/DefInjected/BodyPartDef/BodyParts.xml
+++ b/Common/Languages/Russian/DefInjected/BodyPartDef/BodyParts.xml
@@ -1,10 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
 
+  <!-- EN: fangs -->
   <GR_Fangs.label>клыки</GR_Fangs.label>
+  <!-- EN: body -->
   <GR_JellyfishMainBody.label>тело</GR_JellyfishMainBody.label>
+  <!-- EN: hydrogen-chemfuel sac -->
   <GR_HydrogenSac.label>водородно-топливный пузырь</GR_HydrogenSac.label>
+  <!-- EN: baby body -->
   <GR_Nucleus.label>детское тело</GR_Nucleus.label>
-
 
 </LanguageData>
