--- a/Common/Languages/Russian/DefInjected/BodyPartGroupDef/BodyPartGroups.xml
+++ b/Common/Languages/Russian/DefInjected/BodyPartGroupDef/BodyPartGroups.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
 
+  <!-- EN: fangs -->
   <GR_FangsAttackTool.label>клыки</GR_FangsAttackTool.label>
-
 
 </LanguageData>
